# tg_habit_bot

./: README.md  alembic.ini  docker-compose.yaml  dockerfile  init.sql  pyproject.toml  requirements.txt
app/: main.py  scheduler.py  schemas.py  settings.py  utils.py
db/: alembic.ini  crud.py  db.py  db_utils.py  models.py
db/18/docker/: postmaster.pid
db/18/docker/base/1/: 2619  2619_fsm  2696  2840  2840_fsm  2841
db/18/docker/base/16384/: 1247  1249  1249_fsm  1259  16397  16401  16403  16404  16411  16412  16414  16415  16425  16426  2224  24589  24595  24596  24598  2579  2604  2606  2608  2608_fsm  2610  2610_fsm  2619  2619_fsm  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  (+12 more)
db/18/docker/global/: 1260  1262  2396  2671  pg_control  pg_internal.init
db/alembic/versions/: 6122b03d6a04_add_column_password_hash_for_user.py  627cd0c9dce0_init_migration.py
db/migrations/versions/: fd97e49de906_initial_migrationedead.py
tg_bot/: .env  controller.py  main.py  schema.sql  utils_bot.py
